--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,8 @@ body{
   font-size:12px;
   line-height:1.5em;
   background:#fefefe;
-  width: 45em;
-  margin: 10px auto;
-  padding: 1em;
-  outline: 1300px solid #FAFAFA;
+  margin: 0;
+  padding: 0;
 }
 
 a{ color: #0645ad; text-decoration:none;}
@@ -122,37 +120,109 @@ body{font-size:16px;}
   h2, h3 { page-break-after: avoid; }
 }
 
-#jump_to, #jump_page {
-  background: white;
-  -webkit-box-shadow: 0 0 25px #777; -moz-box-shadow: 0 0 25px #777;
-  -webkit-border-bottom-left-radius: 5px; -moz-border-radius-bottomleft: 5px;
-  font: 10px Arial;
-  text-transform: uppercase;
-  cursor: pointer;
-  text-align: right;
+#container {
+  width: 100%;  
+  min-width: 1000px;
 }
-#jump_to, #jump_wrapper {
+
+#navigation {
+  width: 250px;
+  float: left;
+  padding-top: 25px;
+}
+
+#navigation h1 {
+  font-size: 2em;
+  border-bottom: 1px solid #ccc;
+  padding-left: 25px;
+  position: fixed;;
+}
+
+#navigation ul {
+  list-style: none;
   position: fixed;
-  right: 0; top: 0;
-  padding: 5px 10px;
+  top: 80px;
 }
-  #jump_wrapper {
-    padding: 0;
-    display: none;
-  }
-    #jump_to:hover #jump_wrapper {
-      display: block;
-    }
-    #jump_page {
-      padding: 5px 0 3px;
-      margin: 0 0 25px 25px;
-    }
-      #jump_page li {
-        display: block;
-        padding: 5px 10px;
-        text-decoration: none;
-        border-top: 1px solid #eee;
-      }
-        #jump_page li:hover {
-          background: #f5f5ff;
-        }
+
+#navigation .build {
+  font-size: .8em;
+  color: #ccc;
+}
+
+#content {
+  width: 65%;
+  float: left;
+  min-width: 650px;
+  min-height: 500px;
+  padding: 20px;
+  border-left: 1px solid #ccc;
+}
+
+#footer {
+  
+  margin: 0;
+  padding: 0;
+  
+    
+border-top: 1px solid #e8e8e8;
+  margin-top: 25px;
+  width: 100%;
+   
+
+}
+
+#footer p {
+  padding: 10px;
+  margin: 0;
+}
+
+/*CSS KICKSTART---------------------------------
+  TABLES
+-----------------------------------*/
+table{width:100%;margin:0 0 10px 0;text-align:left;border-collapse: collapse;}
+  thead, tbody{margin:0;padding:0;}
+  th, td{padding:7px 10px;font-size:0.9em;border-bottom:1px dotted #ddd;text-align:left;}
+  thead th{font-size:0.9em;padding:3px 10px;border-bottom:1px solid #ddd;}
+  tbody tr.last th,
+  tbody tr.last td{border-bottom:0;}
+
+/* striped */
+table.striped{}
+  table.striped tr.alt{background:#f5f5f5;}
+  table.striped thead th{background:#fff;}
+  table.striped tbody th{background:#f5f5f5;text-align:right;padding-right:15px;border-right:1px dotted #e5e5e5;}
+  table.striped tbody tr.alt th{background:#efefef;}
+
+/* tight */
+table.tight{}
+  table.tight th, .tight td{padding:2px 10px;}
+
+/* sortable */
+table.sortable{border:1px solid #ddd;}
+  table.sortable thead th{cursor: pointer;position:relative;top:0;left:0;border-right:1px solid #ddd;}
+  table.sortable thead th:hover{background:#efefef;}
+  table.sortable span.arrow{border-style:solid;border-width:5px;
+  display:block;position:absolute;top:50%;right:5px;font-size:0;
+  border-color:#ccc transparent transparent transparent;
+  line-height:0;height:0;width:0;margin-top:-2px;}
+  table.sortable span.arrow.up{border-color:transparent transparent #ccc transparent;margin-top:-7px;}
+
+
+  .clearfix:before,
+.clearfix:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+/*
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+
+.clearfix {
+    *zoom: 1;
+}
